@@ -392,6 +392,9 @@ Library
 - Issue #24298: Fix inspect.signature() to correctly unwrap wrappers
   around bound methods.
 
+- Issue #23572: Fixed functools.singledispatch on classes with falsy
+  metaclasses.  Patch by Ethan Furman.
+
 IDLE
 ----
 
